--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "firebase": "^8.0.0",
+    "framer-motion": "^2.9.5",
     "js-file-download": "^0.4.12",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
